--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
         <a href="critical.html" style="text-decoration: none; color: black">
         <div class="card">
           <img
-            src="/img/critical-thinking-icon-simple-element-from-life-skills-collection-filled-critical-thinking-icon-for-templates-infographics-and-more-2D4YCTP.jpg"
+            src="img/critical-thinking-icon-simple-element-from-life-skills-collection-filled-critical-thinking-icon-for-templates-infographics-and-more-2D4YCTP.jpg"
             class="card-img-top"
             alt="..."
           />
@@ -133,7 +133,7 @@
       <div class="col">
         <a href="mathe.html" style="text-decoration: none; color: black">
         <div class="card">
-          <img src="/img/download.jpg" class="card-img-top" alt="..." />
+          <img src="img/download.jpg" class="card-img-top" alt="..." />
           <div class="card-body">
             <h5 class="card-title">Mathe 4</h5>
             <p class="card-text">
@@ -148,7 +148,7 @@
         <a href="electronics.html" style="text-decoration: none; color: black">
         <div class="card">
           <img
-            src="/img/e9cbb26a7f5495c98439335fafdfae6b.jpg"
+            src="img/e9cbb26a7f5495c98439335fafdfae6b.jpg"
             class="card-img-top"
             alt="..."
           />
@@ -167,7 +167,7 @@
         <a href="measurement.html" style="text-decoration: none; color: black">
         <div class="card">
           <img
-            src="/img/measurement-instrument-logo-simple-black-style-vector-18737148.jpg"
+            src="img/measurement-instrument-logo-simple-black-style-vector-18737148.jpg"
             class="card-img-top"
             alt="..."
           />
@@ -185,7 +185,7 @@
       <div class="col">
         <a href="technical.html" style="text-decoration: none; color: black">
         <div class="card">
-          <img src="/img/techwriting.png" class="card-img-top" alt="..." />
+          <img src="img/techwriting.png" class="card-img-top" alt="..." />
           <div class="card-body">
             <h5 class="card-title">Technical writting</h5>
             <p class="card-text">
